// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberInput > should click on min button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r25»"
              max="100"
              min="0"
              placeholder=""
              step="1"
              type="number"
              value="10"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should click on plus button with a step value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r29»"
              max="100"
              min="0"
              placeholder=""
              step="10"
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should click on plus button with a step value and an in-between value set 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r2l»"
              max="100"
              min="0"
              placeholder=""
              step="10"
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should focus input and modify value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r2d»"
              max="100"
              min="10"
              placeholder=""
              step="10"
              type="number"
              value="1"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should focus input and modify value when value > max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r2h»"
              max="5"
              min="1"
              placeholder=""
              step="1"
              type="number"
              value="10"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r0»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r1a»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size large and unit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="true"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_hasUnit_true__1ce7gb6c styles_size_large__1ce7gb6f"
              id="«r1e»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
            <span
              class="styles__1ce7gb65 styles_size_large__1ce7gb68 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              GB
            </span>
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_medium__1ce7gb6o styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="medium"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_medium__1ce7gb61 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="medium"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_medium__1ce7gb6e"
              id="«r1j»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_medium__1ce7gb61 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="medium"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size medium and unit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_medium__1ce7gb6o styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="medium"
          data-success="false"
          data-unit="true"
        >
          <div
            class="styles_medium__1ce7gb61 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="medium"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_hasUnit_true__1ce7gb6c styles_size_medium__1ce7gb6e"
              id="«r1n»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
            <span
              class="styles__1ce7gb65 styles_size_medium__1ce7gb67 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              GB
            </span>
          </div>
          <div
            class="styles_medium__1ce7gb61 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="medium"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_small__1ce7gb6n styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="small"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_small__1ce7gb60 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="small"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_small__1ce7gb6d"
              id="«r1s»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_small__1ce7gb60 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="small"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly all sizes > with size small and unit 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_small__1ce7gb6n styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="small"
          data-success="false"
          data-unit="true"
        >
          <div
            class="styles_small__1ce7gb60 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="small"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_hasUnit_true__1ce7gb6c styles_size_small__1ce7gb6d"
              id="«r20»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
            <span
              class="styles__1ce7gb65 styles_size_small__1ce7gb66 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              GB
            </span>
          </div>
          <div
            class="styles_small__1ce7gb60 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="small"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_disabled__1ce7gb6m"
          data-controls="true"
          data-disabled="true"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              disabled=""
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              disabled=""
              id="«r4»"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              disabled=""
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly max value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r16»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly min value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«r12»"
              max="100"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_error__1ce7gb6k"
          data-controls="true"
          data-disabled="false"
          data-error="true"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«rk»"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        This is an error
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <label
        class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="«ra»"
      >
        Label
      </label>
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«ra»"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with label description 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
      >
        <label
          class="styles_htmlFor__17td3g91 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          for="«rf»"
        />
        <div>
          label description
        </div>
      </div>
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«rf»"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«ru»"
              max="9007199254740991"
              min="0"
              placeholder="Enter a value here"
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_success__1ce7gb6j"
          data-controls="true"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="true"
          data-unit="false"
        >
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
          </div>
          <div
            class="styles__1ce7gb63 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f"
              id="«rp»"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
          <div
            class="styles_large__1ce7gb62 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_neutral__e1wcoed styles_undefined_compound_24__e1wcoe19"
              type="button"
            >
              <svg
                class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa styles_undefined_compound_39__vbm0wq1n"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_success__m4c9owc style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_16__m4c9ow1s style_undefined_compound_72__m4c9ow3c"
      >
        This is a success
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`numberInput > should renders correctly without controls 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <div>
        <div
          class="styles__1ce7gb6h styles_size_large__1ce7gb6p styles_state_default__1ce7gb6i"
          data-controls="false"
          data-disabled="false"
          data-error="false"
          data-size="large"
          data-success="false"
          data-unit="false"
        >
          <div
            class="styles__1ce7gb63 styles_controls_false__1ce7gb64 styles__x6hyh50 styles_alignItems_center_xxsmall__x6hyh52p styles_justifyContent_space-between_xxsmall__x6hyh561"
            style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
          >
            <input
              class="styles__1ce7gb6b styles_size_large__1ce7gb6f styles_controls_false__1ce7gb6g"
              id="«r8»"
              max="9007199254740991"
              min="0"
              placeholder=""
              type="number"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
